--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <title>title</title>
 </head>
 <body>
-
+    
 <h1>Thomas Trinh</h1>
+<p>Studying Software Engineering at U.A Whitaker College of Engineering at Florida Gulf Coast University.</p>
 <p>Personal website project for COP1500.</p>
-<p></p>
+<p>Github: https://github.com/thomastrinhh</p>
+<p>LinkedIn: https://www.linkedin.com/in/thomas-trinh-8b7972236</p>
 
 </body>
 </html>
