--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
 </head>
 <body>
     
+<img src=https://upload.wikimedia.org/wikipedia/en/thumb/9/95/Florida_Gulf_Coast_Eagles_logo.svg/800px-Florida_Gulf_Coast_Eagles_logo.svg.png
+" alt="W3Schools.com width="104" height="142">
+
+
 <h1>Thomas Trinh</h1>
 <p>Studying Software Engineering at U.A Whitaker College of Engineering at Florida Gulf Coast University.</p>
 <p>Personal website project for COP1500.</p>
-<p>Github: https://github.com/thomastrinhh</p>
-<p>LinkedIn: https://www.linkedin.com/in/thomas-trinh-8b7972236</p>
+
+
+
+<p>Github:</p>
+<a href=https://github.com/thomastrinhh>https://github.com/thomastrinhh</a>
+
+
+<p>LinkedIn:</p>
+<a href=https://www.linkedin.com/in/thomas-trinh-8b7972236>https://www.linkedin.com/in/thomas-trinh-8b7972236</a>
+
+<p></p>
+
+
 
 </body>
 </html>
