--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <h1>Thomas Trinh</h1>
-<p>Studying Software Engineering at U.A Whitaker College of Engineering at Florida Gulf Coast University.</p>
+<p>Studying Software Engineering at U.A Whitaker College of Engineering, Florida Gulf Coast University.</p>
 <p>Personal website project for COP1500.</p>
 
 
